# words_counter

./: BufferReader.cpp  BufferReader.h  BufferTaskSolver.cpp  BufferTaskSolver.h  CMakeLists.txt  CountDispatcher.cpp  CountDispatcher.h  README.md  Timer.cpp  Timer.h  WordsCounter.cpp  WordsCounter.h  main.cpp  output.txt  small_input.txt
